// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should create shapshot of when url is not undefined 1`] = `
<DocumentFragment>
  <span
    aria-label="HR Taskforce"
    class="fui-Avatar r81b29z"
    id="avatar-r1"
    role="img"
  >
    <span
      class="fui-Avatar__initials rip04v ___1ijdyrp_1g9zh4u f1up9qbj f42feg1"
      id="avatar-r1__initials"
    >
      HT
    </span>
    <img
      alt=""
      aria-hidden="true"
      class="fui-Avatar__image r136dc0n ___1ijdyrp_1g9zh4u f1up9qbj f42feg1"
      role="presentation"
      src="data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAEAAAABCAIAAACQd1PeAAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8YQUAAAAJcEhZcwAAEnQAABJ0Ad5mH3gAAAAMSURBVBhXY/j//z8ABf4C/qc1gYQAAAAASUVORK5CYII="
    />
  </span>
</DocumentFragment>
`;

exports[`should create shapshot of when url is undefined 1`] = `
<DocumentFragment>
  <span
    aria-label="HR Taskforce"
    class="fui-Avatar r81b29z"
    id="avatar-r0"
    role="img"
  >
    <span
      class="fui-Avatar__initials rip04v ___1ijdyrp_1g9zh4u f1up9qbj f42feg1"
      id="avatar-r0__initials"
    >
      HT
    </span>
  </span>
</DocumentFragment>
`;
